@@ -162,6 +162,7 @@ https://github.com/elastic/beats/compare/v6.4.0...v6.5.0[View commits]
 - Fix bug in loading dashboards from zip file. {issue}8051[8051]
 - Fix in-cluster kubernetes configuration on IPv6. {pull}8754[8754]
 - The export config subcommand should not display real value for field reference. {pull}8769[8769]
+- Start autodiscover consumers before producers. {pull}7926[7926]
 - The setup command will not fail if no dashboard is available to import. {pull}8977[8977]
 - Fix central management configurations reload when a configuration is removed in Kibana. {issue}9010[9010]
 
